--- a/src/Lykke.AlgoStore.Common/Lykke.AlgoStore.Common.csproj
+++ b/src/Lykke.AlgoStore.Common/Lykke.AlgoStore.Common.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>1.0.1</Version>
+    <Authors>Lykke</Authors>
+    <Company>Lykke</Company>
+    <Product>Lykke.AlgoStore.Common</Product>
+    <Description>Lykke.AlgoStore.Common</Description>
+    <PackageProjectUrl>https://github.com/LykkeCity/Lykke.AlgoStore.Common</PackageProjectUrl>
+    <PackageIconUrl>https://avatars3.githubusercontent.com/u/14153330?v=3&amp;s=200</PackageIconUrl>
+    <RepositoryUrl>https://github.com/LykkeCity/Lykke.AlgoStore.Common.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
 </Project>
